<?xml version="1.0"?>
<package>
  <name>simple_display</name>
  <version>0.0.1</version>
  <description>The simple_display package</description>
  
  <author>Alan Meekins</author>
  <maintainer email="code@roshub.io">code@roshub</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>simple_display_msgs</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>simple_display_msgs</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>
</package>